--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ django-environ==0.11.2
 djangorestframework==3.15.2
 drf-yasg==1.21.8
 inflection==0.5.1
+mysqlclient==2.2.6
 packaging==24.2
 pytz==2024.2
 PyYAML==6.0.2
