--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,5 +1,7 @@
 asgiref==3.8.1
 asttokens==3.0.0
+certifi==2024.12.14
+charset-normalizer==3.4.1
 colorama==0.4.6
 comm==0.2.2
 debugpy==1.8.11
@@ -9,6 +11,7 @@ django-environ==0.11.2
 djangorestframework==3.15.2
 drf-yasg==1.21.8
 executing==2.1.0
+idna==3.10
 inflection==0.5.1
 ipykernel==6.29.5
 ipython==8.31.0
@@ -30,6 +33,7 @@ pytz==2024.2
 pywin32==308
 PyYAML==6.0.2
 pyzmq==26.2.0
+requests==2.32.3
 six==1.17.0
 sqlparse==0.5.3
 stack-data==0.6.3
@@ -38,4 +42,5 @@ traitlets==5.14.3
 typing_extensions==4.12.2
 tzdata==2024.2
 uritemplate==4.1.1
+urllib3==2.3.0
 wcwidth==0.2.13
